Version 2.0.0 - 2011-04-27
* Bug fixes (see mercurial logs for details)

Version 1.8.0 - 2010-11-01
* Bug fixes (see mercurial logs for details)

Version 1.6.0 - 2010-05-09
* Bug fixes (see mercurial logs for details)
* Remove classification_public

Version 1.4.0 - 2009-10-19
* Initial release