@@ -1,3 +1,5 @@
+* Basic support of event time-range filter
+
 Version 2.0.0 - 2011-04-27
 * Bug fixes (see mercurial logs for details)
 
